k8s/calculator-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator-deployment
  labels:
    app: calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
      - name: calculator-container
        image: ashokvsetty/docker-repo:main-d837c82
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
spec:
  type: LoadBalancer
  selector:
    app: calculator
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
